Fixed home spacing issue and imported correct fonts

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -142,6 +142,7 @@
 
         .powered-by {
           flex: unset;
+          justify-content: flex-start;
           p {
             letter-spacing: normal;
           }
